[gd_scene load_steps=10 format=3 uid="uid://wp7gf3jn2ixb"]

[ext_resource type="Script" path="res://Script/MenuInterface.gd" id="1_1r1ny"]
[ext_resource type="Texture2D" uid="uid://bb1otc3lr810g" path="res://Assets/Background/background.png" id="2_ji7k0"]
[ext_resource type="PackedScene" uid="uid://dy4wnm8hd1fpu" path="res://Scenes/player_character.tscn" id="3_7dhf0"]
[ext_resource type="PackedScene" uid="uid://c30q2yd6cqwjy" path="res://Scenes/mainmenu_play_button.tscn" id="4_b8wfp"]
[ext_resource type="PackedScene" uid="uid://daf3idayk00t4" path="res://Scenes/mainmenu_simulate_button.tscn" id="5_3mnt4"]
[ext_resource type="PackedScene" uid="uid://o4ywk5eo8vrp" path="res://Scenes/mainmenu_editor_button.tscn" id="6_rv6no"]
[ext_resource type="PackedScene" uid="uid://b01ahr3ttvrcj" path="res://Scenes/mainmenu_options_button.tscn" id="7_664qd"]
[ext_resource type="PackedScene" uid="uid://bprfaytmumg7r" path="res://Scenes/mainmenu_quit_button.tscn" id="8_54qqn"]
[ext_resource type="AudioStream" uid="uid://bmqn5mn4rg3ys" path="res://Assets/BGM/2019-05-01_-_Undercover_Spy_Agent_-_David_Fesliyan.mp3" id="9_ehetc"]

[node name="Menu_Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1r1ny")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(640.273, 419.932)
scale = Vector2(3.9984, 4.00055)
texture = ExtResource("2_ji7k0")

[node name="Player" parent="." instance=ExtResource("3_7dhf0")]
position = Vector2(160, 620)
scale = Vector2(1.8, 1.8)

[node name="Play" parent="." instance=ExtResource("4_b8wfp")]
layout_mode = 0
offset_left = 480.0
offset_top = 344.0
offset_right = 624.0
offset_bottom = 380.0
scale = Vector2(2, 2)

[node name="Simulate" parent="." instance=ExtResource("5_3mnt4")]
layout_mode = 0
offset_left = 479.941
offset_top = 419.15
offset_right = 623.941
offset_bottom = 455.15
scale = Vector2(2, 2)

[node name="Editor" parent="." instance=ExtResource("6_rv6no")]
layout_mode = 0
offset_left = 479.911
offset_top = 494.405
offset_right = 623.911
offset_bottom = 530.405
scale = Vector2(2, 2)

[node name="Options" parent="." instance=ExtResource("7_664qd")]
layout_mode = 0
offset_left = 479.552
offset_top = 569.714
offset_right = 623.552
offset_bottom = 605.714
scale = Vector2(2, 2)

[node name="Quit" parent="." instance=ExtResource("8_54qqn")]
layout_mode = 0
offset_left = 479.86
offset_top = 645.177
offset_right = 623.86
offset_bottom = 681.177
scale = Vector2(2, 2)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ehetc")
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
